DOCS: atualizando route docs swagger
